--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRASHFLIX</title>
 
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    
   </head>
   <body>
     <header>
@@ -41,11 +42,18 @@
           </p>
 
           <div class="botoes"></div>
-          <button role="button" class="botao">ASSISTIR AGORA</button>
-          <button role="button" class="botao">MAIS INFORMAÇÕES</button>
+          <button role="button" class="botao">
+            <i class="fa-solid fa-play"></i>
+            ASSISTIR AGORA</button>
+          <button role="button" class="botao">
+            <i class="fa-solid fa-circle-info"></i>
+            MAIS INFORMAÇÕES</button>
           </div>
         </div>
       </div>
+
+      <script src="https://kit.fontawesome.com/2e96326ca3.js" crossorigin="anonymous"></script>
+      
     </main>
   </body>
 </html>
